fixed navbar jumping down in mobile view

--- a/src/static/css/styles.scss
+++ b/src/static/css/styles.scss
@@ -38,7 +38,6 @@ ul.topnav {
 
 // ################### CAROUSEL #####################
 .carousel {
-  margin-top: 40px;
   .carousel-item-1 {
     background-image: url('../images/image1.jpg');
     background-position: center;
